--- a/src/index.css
+++ b/src/index.css
@@ -36,10 +36,14 @@ Form {
   background-image: url("1.jpg");
   padding-bottom: 50px;
   width: 100%;
-  height: 100%;
-  position: absolute;
+  height: auto;
+  /* position: absolute; */
   top: 0;
   left: 0;
+  position: absolute;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover; 
 
 }
 
@@ -47,8 +51,8 @@ Form {
   background-image: url("2.jpg");
   padding-bottom: 50px;
   width: 100%;
-  height: 100%;
-  position: absolute;
+  height: auto;
+  position: center;
   top: 0;
   left: 0;
 
@@ -74,6 +78,18 @@ Button {
 
   }
 }
+
+/* @media screen and (max-width: 489px) {
+  Form {
+    margin-top: 5%;
+  }
+
+  #newstyle {
+    width: 100%;
+    margin-left: 0%;
+
+  }
+} */
 
 #searchbox {
   margin-top: 20%;
