--- a/src/index.css
+++ b/src/index.css
@@ -91,9 +91,9 @@ button {
 }
 
 #searchbox {
-  margin-top: 10%;
-  width: 20%;
-  margin-left: 40%;
+  margin-top: 25%;
+  width: 50%;
+  margin-left: 25%;
   background-color: white;
   padding: 30px 25px 25px 25px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -138,5 +138,17 @@ button {
   #newstyle {
     width: 200%;
     margin-left: -50%;
+  }
+  #searchbox {
+    width: 60%;
+    margin-left: 20%;
+    margin-top: 20%;
+  }
+  .background3 {
+    top: 0px;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 }
